# CodeStoryCli

./: .gitattributes  .gitignore  .vibeconfig.example  COMMERCIAL-LICENCE.txt  LICENCE.txt  LLM_SETUP.md  README.md  add_header.ps1  add_header.py  build.py  build_exe.py  build_exe_opt.py  build_lite.py  build_log.txt  pyoxidizer.bzl  pyproject.toml  t.py  test_llm_config.py  test_semantic_grouper.py  time.txt
.github/workflows/: build-release.yml  deploy-all.yml  deploy-apt.yml  deploy-chocolatey.yml  deploy-docs.yml  deploy-homebrew.yml  deploy-pypi.yml  deploy-snapcraft.yml  deploy-winget.yml  pytest.yml
codestory/: mkdocs.yml
codestory/codestory/: __init__.py  __main__.py  cli.py  context.py  runtimeutil.py
codestory/codestory/commands/: __init__.py  clean.py  commit.py  config.py  fix.py
codestory/codestory/core/: __init__.py  exceptions.py  validation.py
codestory/codestory/core/branch_saver/: branch_saver.py
codestory/codestory/core/checks/: chunk_checks.py
codestory/codestory/pipelines/: clean_pipeline.py  commit_init.py  commit_pipeline.py  fix_pipeline.py
codestory/codestory/resources/: language_config.json
codestory/docs/: index.md
codestory/docs/reference/: root.md
codestory/tests/integration/: __init__.py  conftest.py  repo_utils.py  test_api.py  test_clean.py  test_commit.py  test_config.py  test_fix.py
codestory/tests/unit/: context_test.py  runtimeutil_test.py
custom_hooks/: hook-tree_sitter_language_pack.py
dslate/: mkdocs.yml  test_output.txt
dslate/docs/: index.md
dslate/docs/reference/: root.md
dslate/dslate/: __init__.py  __main__.py  cli.py  context.py  runtimeutil.py
dslate/dslate/commands/: __init__.py  clean.py  commit.py  config.py  expand.py  fix.py
dslate/dslate/core/: __init__.py  exceptions.py  validation.py
dslate/dslate/core/data/: chunk.py  (+7 more)
dslate/dslate/pipelines/: clean_pipeline.py  commit_init.py  commit_pipeline.py  expand_pipeline.py  fix_pipeline.py
dslate/dslate/resources/: language_config.json
dslate/tests/integration/: conftest.py  repo_utils.py  test_api.py  test_clean.py  test_commit.py  test_config.py  test_fix.py
dslate/tests/unit/: context_test.py  runtimeutil_test.py
recommendations/: documentation_improvements.md  error_handling_example.py  immediate_improvements.py  input_validation_example.py  security_config_example.py
src/: mkdocs.yml
src/codestory/: cli.py  constants.py  context.py  onboarding.py  runtimeutil.py
src/codestory/commands/: clean.py  commit.py  config.py  fix.py
src/codestory/core/: exceptions.py  validation.py
src/codestory/pipelines/: clean_pipeline.py  diff_context.py  fix_pipeline.py  grouping_context.py  rewrite_init.py  rewrite_pipeline.py  standard_cli_pipeline.py
src/codestory/resources/: language_config.json  language_config_schema.json
src/codestory/summarization/: __init__.py  chunk_summarizer.py  prompts.py  summarizer_utils.py
src/docs/: index.md
src/docs/configuration/: index.md
src/docs/design/: commit-strategy.md  how-it-works.md  index.md  logical-grouping.md  mechanical-chunking.md  semantic-grouping.md
src/docs/extensibility/: index.md
src/docs/getting-started/: index.md
src/docs/philosophy/: index.md
src/docs/reference/: root.md  supported.md
src/docs/stylesheets/: extra.css
src/docs/troubleshooting/: index.md
src/docs/usage/: index.md
src/tests/integration/: conftest.py  repo_utils.py  test_api.py  test_clean.py  test_commit.py  test_fix.py
src/tests/unit/: context_test.py  runtimeutil_test.py  test_context.py
src/vibe/: cli.py
src/vibe/commands/: commit.py
vibe/vibe/: __main__.py  cli.py  context.py  runtimeutil.py
vibe/vibe/commands/: __init__.py  clean.py  commit.py  expand.py  init.py
vibe/vibe/core/: __init__.py  exceptions.py  validation.py
vibe/vibe/pipelines/: clean_pipeline.py  commit_init.py  commit_pipeline.py  expand_pipeline.py
vibe/vibe/resources/: language_config copy.json  language_config.json  language_config_schema.json
vibe_playground/: fileA.py  fileB.py  playground.py  test.py  test_file_parser.py  test_manager.py
(+367 files in other folders)
