[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codestory"
version = "0.1.0"
description = "An AI-powered abstraction layer above Git. Focus on vibecoding, let codestory handle the rest."
authors = [
  { name = "Adem Can", email = "ademfcan@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "inquirer>=3.4.1",
  "langchain>=1.0.0",
  "langchain-core>=1.0.0",
  "langchain-google-genai>=2.1.12",
  "langchain-openai>=0.2.0",
  "langchain-anthropic>=0.3.0",
  "langchain-ollama>=0.2.0",
  "python-dotenv>=1.1.1",
  "loguru>=0.7.3",
  "tree-sitter>=0.21.0",
  "tree-sitter-language-pack>=0.1.0",
  "pygments>=2.14.0",
  "platformdirs>=4.5.0",
]

[project.scripts]
cst = "codestory.cli:app"

[tool.setuptools.packages.find]
where = ["codestory"]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy"
]

[tool.setuptools.package-data]
codestory = ["resources/*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "tree_sitter.*",
    "inquirer.*",
    "langchain.*",
    "langchain_google_genai.*",
    "git.*",
    "pygments.*",
    "importlib.*"
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

