[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe"
version = "0.1.0"
description = "An AI-powered abstraction layer above Git. Focus on vibecoding, let vibe handle the rest."
authors = [
  { name = "Adem Can", email = "ademfcan@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "GitPython>=3.1.45",
  "inquirer>=3.4.1",
  "langchain>=0.3.27",
  "langchain-google-genai>=2.1.12",
  "python-dotenv>=1.1.1",
  "loguru>=0.7.3",
  "tree-sitter>=0.21.0",
  "tree-sitter-language-pack>=0.1.0",
  "pygments>=2.14.0",
  "platformdirs>=4.5.0",
  "importlib==1.0.4"
]

[project.scripts]
vibe = "vibe.cli:app"

[tool.setuptools.packages.find]
where = ["vibe"]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy"
]

[tool.setuptools.package-data]
vibe = ["resources/*"]

